# GenAI_session4_multi_modal

./: README.md  pyproject.toml
multi_modal_rag/: rag_langchain_multimodal.py  streamlit_app_langchain_multimodal.py
